objects/USA_Product_Master__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>USA_Brand__c</fullName>
        <label>Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Product_Code__c</fullName>
        <externalId>true</externalId>
        <label>Product Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Product_Level__c</fullName>
        <label>Product Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Product__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Sub_Brand__c</fullName>
        <label>Sub Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USA Product Master</label>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>USA Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USA Product Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>